# drf_Authentication

./: pyproject.toml  requirements copy.txt  requirements.txt
motor/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
motor/migrations/: 0001_initial.py
rides/: asgi.py  settings.py  urls.py  wsgi.py
